--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "robosearch",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://andriikachmar.github.io/robosearch/",
   "dependencies": {
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -11,6 +12,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
@@ -25,5 +28,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
